--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,5 +5,6 @@
     <li><%= link_to tasks.id, tasks %> : <%= tasks.status %> &gt; <%= tasks.content %> </li>
   <% end %>
 </ul>
+<%= paginate @tasks %>
 
 <%= link_to '新規タスクの作成', new_task_path %>
