--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,8 +5,8 @@
     <thead>
       <tr>
         <th>id</th>
-        <th>タイトル</th>
-        <th>メッセージ</th>
+        <th>ステータス</th>
+        <th>タスク</th>
       </tr>
     </thead>
     <tbody>
