--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-<html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>TaskList</title>
+    <title>Microposts</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -19,7 +18,8 @@
   </head>
 
   <body>
-        <%= render 'layouts/navbar' %>
+    <%= render 'layouts/navbar' %>
+
     <div class="container">
       <%= render 'layouts/flash_tasks' %>
 
