--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,13 @@
-<h1>タスクリスト一覧</h1>
-
+<% if logged_in? %>
+  <p>ログイン完了ユーザ: <%= current_user.name %></p>
+  
+  <% else %>
+<div class="center jumbotron">
+  <div class="text-center">
+    <h1>Welcome to the Microposts</h1>
+      <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+  </div>
+</div>
 <% if @tasks.any? %>
   <table class="table table-striped">
     <thead>
@@ -24,3 +32,4 @@
 </div>
 <% end %>
 <%= link_to '新規タスクの作成', new_task_path, class: "btn btn-primary" %>
+<% end %>
